package stars.controller;

import stars.entity.*;
import java.util.ArrayList;

public interface UserControllerInterface {
    public ArrayList<Course> getCourseList();
}
