@startuml

title __CONTROLLER's Class Diagram__\n

  namespace stars.controller {
    class stars.controller.AdminController {
        + AdminController()
        + addCourse()
        + addIndex()
        + addStudent()
        + addTiming()
        + changeIndexID()
        + createCourse()
        + createIndex()
        + createTiming()
        + dropIndex()
        + editAccess()
        + getCourseList()
        + getStudentList()
        + save()
        + setCourseID()
        + setVacancyLimit()
    }
  }
  

  namespace stars.controller {
    interface stars.controller.Authenticator {
        {abstract} + authenticate()
    }
  }
  

  namespace stars.controller {
    class stars.controller.DatabaseManager {
        - DATABASE_FILE : String
        + DatabaseManager()
        + addCourse()
        + addStudent()
        + findStudent()
        + getCoursesArray()
        + getStudentArray()
        + saveInformation()
        - loadInformation()
    }
  }
  

  namespace stars.controller {
    class stars.controller.FlatFileAdminAuthenticator {
        - ADMIN_ACCOUNT_FILE : String
        + authenticate()
    }
  }
  

  namespace stars.controller {
    class stars.controller.FlatFileStudentAuthenticator {
        - STUDENT_ACCOUNTS_FILE : String
        + addStudent()
        + authenticate()
        + editAccess()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentAdder {
        + addStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentDropper {
        + dropStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.IndexStudentSwopper {
        + swopStudent()
    }
  }
  

  namespace stars.controller {
    class stars.controller.LoginController {
        + verifyLogin()
    }
  }
  

  namespace stars.controller {
    class stars.controller.SetVacancyLimitController {
        + setVacancyLimit()
    }
  }
  

  namespace stars.controller {
    interface stars.controller.StudentAuthenticator {
        {abstract} + addStudent()
        {abstract} + editAccess()
    }
  }
  

  namespace stars.controller {
    class stars.controller.StudentController {
        + StudentController()
        + addIndex()
        + changeIndex()
        + displayTimetable()
        + dropIndex()
        + getConfirmedIndex()
        + getCourseList()
        + getRegisteredIndex()
        + getWaitlistedIndex()
        + save()
        + swopIndex()
    }
  }
  

  namespace stars.controller {
    class stars.controller.TimetableClashChecker {
        + checkClash()
        + checkClash()
    }
  }
  

  namespace stars.controller {
    interface stars.controller.UserControllerInterface {
        {abstract} + getCourseList()
    }
  }
  

  stars.controller.AdminController .up.|> stars.controller.UserControllerInterface
  stars.controller.AdminController o-- stars.controller.DatabaseManager : dbManager
  stars.controller.DatabaseManager o-- stars.entity.Database : db
  stars.controller.FlatFileAdminAuthenticator .up.|> stars.controller.Authenticator
  stars.controller.FlatFileStudentAuthenticator .up.|> stars.controller.StudentAuthenticator
  stars.controller.StudentController .up.|> stars.controller.UserControllerInterface
  stars.controller.StudentController o-- stars.controller.DatabaseManager : dbManager
  stars.controller.StudentController o-- stars.boundary.TimetableDisplayer : displayer
  stars.controller.StudentController o-- stars.entity.Student : myStudent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
